@@ -15,6 +15,7 @@
 	* Added default implementation of killpg.
 	* Disable ulimit if there is no getrlimit.
 	* Disable histcmd completely when SMALL is defined.
+	* Added default definition for SSIZE_MAX.
 
 2005-10-26  Herbert Xu <herbert@gondor.apana.org.au>
 
